# vef-deployment-platform

./: README.md  eslint.config.js  package.json  pnpm-lock.yaml  stylelint.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/flows/: 0.package.json  1.docker.json  2.database.json  3.base.json  4.minio.json  5.redis.json  6.mms.json
src-tauri/src/: client.rs  command.rs  decompressor.rs  error.rs  file_downloader.rs  file_transfer.rs  flow.rs  flow_asset.rs  hospital_settings.rs  main.rs  package_resolver.rs  progress_reporter.rs  server_settings.rs  session.rs  template.rs  util.rs
src/app/: index.tsx
src/app/config-provider/: index.tsx
src/components/file-picker/: index.tsx
src/components/flow-card/: index.tsx
src/components/ternimal/: index.tsx
src/layouts/default/: index.tsx
src/pages/deployment-flow/: index.tsx
src/pages/flow-execution/: index.tsx
src/pages/hospital-settings/: index.tsx
src/pages/server-settings/: index.tsx
src/pages/service-deployment/: index.tsx
src/router/: index.tsx
src/store/: hooks.ts  index.ts
src/store/features/: flow-execution-slice.ts  user-slice.ts
src/styles/: index.scss
src/types/: app.d.ts
src/utils/: index.ts
