[package]
name = "vef-deployment-platform"
version = "1.0.0"
description = "A very cool project"
authors = ["Venus"]
license = ""
repository = ""
default-run = "vef-deployment-platform"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = ["api-all", "windows7-compat"] }
async-trait = "0.1.81"
russh = "0.44.0"
tokio = { version = "1.29.1", features = ["full"] }
thiserror = "1.0.63"
rust-embed = { version = "8.4.0", features = ["compression", "include-flate", "include-exclude"] }
russh-sftp = "2.0.3"
bytesize = "1.3.0"
tera = "1.19.0"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
futures-util = "0.3.30"
tar = "0.4.41"
async-compression = { version = "0.4.12", features = ["gzip", "tokio"] }
flate2 = "1.0.30"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
